--- a/index.html
+++ b/index.html
@@ -5,30 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=location_on"
-    />
   </head>
   <body>
     <div id="weather-container">
-      <div id="search-info">
-        <input type="text" id="input" placeholder="Enter City" />
-        <button id="search">Search</button>
+      <h1>Weather App</h1>
+      <div id="search">
+        <input
+          id="search-box"
+          type="text"
+          placeholder="Enter city..."
+          autocomplete="off"
+        />
+        <button id="search-btn">Search</button>
       </div>
-      <div id="location">
-        <div id="city-loc">
-          <span class="material-symbols-outlined"> location_on </span>
-          <h4 id="city">London</h4>
-        </div>
-        <h4 id="date">wed,26 dec</h3>
+      <div id="city-info">
+        <div id="location"></div>
+        <div id="date"></div>
       </div>
       <div id="weather-info">
-        <div id="weather-condition">
-            <!-- <img class="image" src="assets/images/sunny,cloudy.png" alt=""> -->
-        </div>
+        <div id="temp"></div>
       </div>
-      <div id="forcast-info"></div>
+      <div id="weather-conditon">
+        <div id="humid"></div>
+        <div id="windspeed"></div>
+      </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
